# controller/chat.go
@@ -22,6 +22,7 @@ import (
 // @Produce json
 // @Param chatModel body model.ChatReq true "chatModel"
 // @Param proxy-secret header string false "proxy-secret"
+// @Param out-time header string false "out-time"
 // @Success 200 {object} model.ReplyResp "Successful response"
 // @Router /api/chat [post]
 func Chat(c *gin.Context) {
@@ -53,7 +54,7 @@ func Chat(c *gin.Context) {
 	discord.ReplyStopChans[sentMsg.ID] = stopChan
 	defer delete(discord.ReplyStopChans, sentMsg.ID)
 
-	timer, err := setTimerWithHeader(chatModel.Stream, common.RequestOutTimeDuration)
+	timer, err := setTimerWithHeader(c, chatModel.Stream, common.RequestOutTimeDuration)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"success": false,
@@ -66,7 +67,7 @@ func Chat(c *gin.Context) {
 		c.Stream(func(w io.Writer) bool {
 			select {
 			case reply := <-replyChan:
-				timerReset(chatModel.Stream, timer, common.RequestOutTimeDuration)
+				timerReset(c, chatModel.Stream, timer, common.RequestOutTimeDuration)
 				urls := ""
 				if len(reply.EmbedUrls) > 0 {
 					for _, url := range reply.EmbedUrls {
@@ -114,6 +115,7 @@ func Chat(c *gin.Context) {
 // @Produce json
 // @Param request body model.OpenAIChatCompletionRequest true "request"
 // @Param Authorization header string false "Authorization"
+// @Param out-time header string false "out-time"
 // @Success 200 {object} model.OpenAIChatCompletionResponse "Successful response"
 // @Router /v1/chat/completions [post]
 func ChatForOpenAI(c *gin.Context) {
@@ -142,7 +144,19 @@ func ChatForOpenAI(c *gin.Context) {
 		}
 	}
 
-	sentMsg, err := discord.SendMessage(discord.ChannelId, content)
+	sendChannelId, err := getSendChannelId(request)
+	if err != nil {
+		c.JSON(http.StatusOK, model.OpenAIErrorResponse{
+			OpenAIError: model.OpenAIError{
+				Message: "未指定discord频道Id或未配置默认频道Id",
+				Type:    "invalid_request_error",
+				Code:    "discord_request_err",
+			},
+		})
+		return
+	}
+
+	sentMsg, err := discord.SendMessage(sendChannelId, content)
 	if err != nil {
 		c.JSON(http.StatusOK, model.OpenAIErrorResponse{
 			OpenAIError: model.OpenAIError{
@@ -162,7 +176,7 @@ func ChatForOpenAI(c *gin.Context) {
 	discord.ReplyStopChans[sentMsg.ID] = stopChan
 	defer delete(discord.ReplyStopChans, sentMsg.ID)
 
-	timer, err := setTimerWithHeader(request.Stream, common.RequestOutTimeDuration)
+	timer, err := setTimerWithHeader(c, request.Stream, common.RequestOutTimeDuration)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"success": false,
@@ -176,13 +190,24 @@ func ChatForOpenAI(c *gin.Context) {
 		c.Stream(func(w io.Writer) bool {
 			select {
 			case reply := <-replyChan:
-				timerReset(request.Stream, timer, common.RequestOutTimeDuration)
+				timerReset(c, request.Stream, timer, common.RequestOutTimeDuration)
+
+				// TODO 多张图片问题
+				if !strings.HasPrefix(reply.Choices[0].Message.Content, strLen) {
+					if len(strLen) > 3 && strings.HasPrefix(reply.Choices[0].Message.Content, "\\n1.") {
+						strLen = strLen[:len(strLen)-2]
+					} else {
+						return true
+					}
+				}
+
 				newContent := strings.Replace(reply.Choices[0].Message.Content, strLen, "", 1)
 				if newContent == "" && strings.HasSuffix(newContent, "[DONE]") {
 					return true
 				}
 				reply.Choices[0].Delta.Content = newContent
 				strLen += newContent
+
 				reply.Object = "chat.completion.chunk"
 				bytes, _ := common.Obj2Bytes(reply)
 				c.SSEvent("", " "+string(bytes))
@@ -219,17 +244,27 @@ func ChatForOpenAI(c *gin.Context) {
 	}
 }
 
-func setTimerWithHeader(isStream bool, defaultTimeout time.Duration) (*time.Timer, error) {
-	var outTimeStr string
-	if isStream {
-		outTimeStr = common.StreamRequestOutTime
+func getSendChannelId(request model.OpenAIChatCompletionRequest) (string, error) {
+	var sendChannelId string
+	if request.ChannelId != nil && *request.ChannelId != "" {
+		sendChannelId = *request.ChannelId
 	} else {
-		outTimeStr = common.RequestOutTime
+		if discord.ChannelId != "" {
+			sendChannelId = discord.ChannelId
+		} else {
+			return "", fmt.Errorf("未指定discord频道Id或未配置默认频道Id")
+		}
 	}
+	return sendChannelId, nil
+}
+
+func setTimerWithHeader(c *gin.Context, isStream bool, defaultTimeout time.Duration) (*time.Timer, error) {
+
+	outTimeStr := getOutTimeStr(c, isStream)
+
 	if outTimeStr != "" {
 		outTime, err := strconv.ParseInt(outTimeStr, 10, 64)
 		if err != nil {
-
 			return nil, err
 		}
 		return time.NewTimer(time.Duration(outTime) * time.Second), nil
@@ -237,13 +272,24 @@ func setTimerWithHeader(isStream bool, defaultTimeout time.Duration) (*time.Time
 	return time.NewTimer(defaultTimeout), nil
 }
 
-func timerReset(isStream bool, timer *time.Timer, defaultTimeout time.Duration) error {
+func getOutTimeStr(c *gin.Context, isStream bool) string {
 	var outTimeStr string
-	if isStream {
-		outTimeStr = common.StreamRequestOutTime
+	if outTime := c.GetHeader(common.OutTime); outTime != "" {
+		outTimeStr = outTime
 	} else {
-		outTimeStr = common.RequestOutTime
+		if isStream {
+			outTimeStr = common.StreamRequestOutTime
+		} else {
+			outTimeStr = common.RequestOutTime
+		}
 	}
+	return outTimeStr
+}
+
+func timerReset(c *gin.Context, isStream bool, timer *time.Timer, defaultTimeout time.Duration) error {
+
+	outTimeStr := getOutTimeStr(c, isStream)
+
 	if outTimeStr != "" {
 		outTime, err := strconv.ParseInt(outTimeStr, 10, 64)
 		if err != nil {
